# Dino-Car

./: .gitmodules  Dino-Car.ino  Log.py  Test.py  blacklist.py  can_publish.py  idle.txt  pushPedal.txt
InstrumentCluster/: Arduino.cpp  Arduino.h  CMakeLists.txt  Cluster.cpp  Renderer.cpp  Renderer.h  VehicleConstants.h
InstrumentCluster/src/: Arduino.cpp  Arduino.h  Cluster.cpp  Renderer.cpp  Renderer.h  RendererBackground.cpp  VehicleConstants.h
buildroot/: Config.in  README.md  external.desc  external.mk
buildroot/board/dinocar/: cmdline.txt  config.txt  genimage.cfg.in  init.sh  linux.fragment  post-build.sh  post-image.sh
buildroot/configs/: dinocar_defconfig
buildroot/package/cluster/: Config.in  cluster.mk
